# network-topology-qgis

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.ru.md  __init__.py  cluster_hulls_algorithm.py  connected_components_algorithm.py  dangle_resolver_algorithm.py  metadata.txt  network_nodes_algorithm.py  pseudonode_collapse_algorithm.py  pyproject.toml  requirements-dev.txt  topology_split_algorithm.py  topology_split_plugin.py  topology_split_provider.py  topology_utils.py
.claude/skills/qgis4-plugin-dev/: SKILL.md
.claude/skills/qgis4-plugin-dev/references/: processing-algorithms.md  qt6-migration.md
.github/workflows/: build-plugin.yml
console/: topology_split_console.py
docs/: development.md
i18n/: network_topology_ru.qm  network_topology_ru.ts
scripts/: deploy.ps1  package.ps1
tests/: conftest.py  test_cluster_hulls.py  test_connected_components.py  test_dangle_resolver.py  test_network_nodes.py  test_pseudonode_collapse.py  test_topology_split_algorithm.py
tools/: update_ts.py
